shortened more urls

--- a/lgbt_friendly_resources.html
+++ b/lgbt_friendly_resources.html
@@ -277,13 +277,13 @@
             <li>
                 <b>Worldwide map</b> for LGBT friendly businesses 
                 <a href="https://www.everywhereisqueer.com/map">
-                    https://www.everywhereisqueer.com/map
+                    everywhereisqueer.com/map
                 </a> 
             </li>
             <li>
                 <b>Worldwide Therapist</b> Search 
                 <a href="https://www.psychologytoday.com/us/therapists">
-                    https://www.psychologytoday.com/us/therapists
+                    psychologytoday.com/therapists
                 </a><br>
                 Select <i>*more*</i> click “LGBT”, 
                 or select <i>*issue*</i> click “<i>transgender</i>”
@@ -292,13 +292,13 @@
                 <b>US therapists</b>: 
                 Need a more affordable therapy option for around $30usd or more? <br>
                 <a href="https://openpathcollective.org">
-                    https://openpathcollective.org
+                    openpathcollective.org
                 </a>
             </li>
             <li>
                 <b>US</b> therapy grants: 
                 <a href="https://nqttcn.com/en/mental-health-fund/">
-                    https://nqttcn.com/en/mental-health-fund/
+                    nqttcn.com/mental-health-fund/
                 </a> 
             </li>
             <li>
@@ -307,19 +307,19 @@
                     <li>
                         Lgbt therapists directory: 
                         <a href="https://queermed-deutschland.de/en/">
-                            https://queermed-deutschland.de/en/
+                            queermed-deutschland.de/
                         </a>
                     </li>
                     <li>
                         Therapists directory: 
                         <a href="https://www.lgbtqandall.com/resources/mental-health/europe/germany/berlin/">
-                            https://www.lgbtqandall.com/resources/mental-health/europe/germany/berlin/
+                            lgbtqandall.com/mental-health/berlin/
                         </a>
                     </li>
                     <li>
                         International therapist map: 
                         <a href="https://internationaltherapistdirectory.com/location/germany-1/">
-                            https://internationaltherapistdirectory.com/location/germany-1/
+                            internationaltherapistdirectory.com/germany/
                         </a>
                     </li>
                 </ul>
@@ -332,7 +332,7 @@
             <li>
                 <b>Erin’s informed consent doctors worldwide map: </b><br>
                 <a href="https://www.google.com/maps/d/u/0/viewer?mid=1DxyOTw8dI8n96BHFF2JVUMK7bXsRKtzA&hl=en_US&fbclid=IwAR1jIX9jDjYvU1MthjAymNw0QBcywO0RChGI8E13UfcoJwweaauI9uqp-6Q&ll=38.53652162688942%2C-102.18971259900887&z=6">
-                    https://www.google.com/maps/
+                    google.com/maps/
                 </a>
             </li>
             <li>
@@ -341,31 +341,31 @@
                     <li>
                         Help moving & housing, finding hrt, and more: 
                         <a href="https://rainbowpassage.org/intake">
-                            https://rainbowpassage.org/intake
+                            rainbowpassage.org/intake
                         </a>
                     </li>
                     <li>
                         US doctors: 
                         <a href="https://lgbtqhealthcaredirectory.org">
-                            https://lgbtqhealthcaredirectory.org
+                            lgbtqhealthcaredirectory.org
                         </a>
                     </li>
                     <li>
                         Lgbt HRT company for online prescriptions: 
                         <a href="https://getplume.co">
-                            https://getplume.co
+                            getplume.co
                         </a>
                     </li>
                     <li>
                         US LGBT directory: 
                         <a href="https://www.lgbtnearme.org">
-                            https://www.lgbtnearme.org
+                            lgbtnearme.org
                         </a>
                     </li>
                     <li>
                         US Southern States directory for doctors: 
                         <a href="https://southernequality.org/resources/transinthesouth/">
-                            https://southernequality.org/resources/transinthesouth/
+                            southernequality.org/transinthesouth/
                         </a>
                     </li>
                 </ul>
@@ -376,19 +376,19 @@
                     <li>
                         Doctors:
                         <a href="https://www.transhealthcareintel.com/trans-friendly-gps">
-                            https://www.transhealthcareintel.com/trans-friendly-gps
+                            transhealthcareintel.com/trans-friendly-gps
                         </a> 
                     </li>
                     <li>
                         Trans friendly UK doctors: 
                         <a href="https://docs.google.com/spreadsheets/d/1b5SSnb7LBUlWSjasN2ld7qPGmEchgDG8voUY-SkfAlw/edit#gid=0">
-                            https://docs.google.com/spreadsheets/
+                            docs.google.com/spreadsheets/
                         </a> 
                     </li>
                     <li>
                         LGBT medical support 
                         <a href="https://www.bma.org.uk/advice-and-support/equality-and-diversity-guidance/lgbtplus-equality-in-medicine/lgbtqplus-equality-in-medicine">
-                            https://www.bma.org.uk/advice-and-support/equality-and-diversity-guidance/lgbtplus-equality-in-medicine/lgbtqplus-equality-in-medicine
+                            bma.org.uk/lgbtqplus-equality-in-medicine
                         </a> 
                     </li>
                 </ul>
@@ -399,13 +399,13 @@
                     <li>
                         Health clinics:
                         <a href="https://www.rainbowhealthontario.ca/2slgbtq-health-resources/">
-                            https://www.rainbowhealthontario.ca/2slgbtq-health-resources/
+                            rainbowhealthontario.ca/2slgbtq-health-resources/
                         </a> 
                     </li>
                     <li>
                         Informed Consent clinic Ontario:
                         <a href="https://guelphchc.ca">
-                            https://guelphchc.ca
+                            guelphchc.ca
                         </a> 
                     </li>
                 </ul>
@@ -416,13 +416,13 @@
                     <li>
                         medical, hrt, legal, etc: 
                         <a href="https://schwulenberatungberlin.de/transitioning-in-berlin/">
-                            https://schwulenberatungberlin.de/transitioning-in-berlin/
+                            schwulenberatungberlin.de/transitioning-in-berlin/
                         </a>:
                     </li>
                     <li>
                         Find a doctor near you:
                         <a href="https://queermed-deutschland.de/en/look-for-recommendations/">
-                            https://queermed-deutschland.de/en/look-for-recommendations/
+                            queermed-deutschland.de/look-for-recommendations/
                         </a> 
                     </li>
                 </ul>
