--- a/pages/trans_representation.html
+++ b/pages/trans_representation.html
@@ -10,24 +10,25 @@
                 <li>
                     Laverne Cox:
                     <a href="https://www.instagram.com/lavernecox/">
-                        https://www.instagram.com/lavernecox/
+                        instagram @lavernecox
                     </a> 
                 </li>
                 <li>
                     Dylan Mulvaney:
                     <a href="https://www.instagram.com/dylanmulvaney/">
-                        https://www.instagram.com/dylanmulvaney/</a> 
+                        instagram @dylanmulvaney
+                    </a> 
                 </li>
                 <li>
                     Jazz Jennings:
                     <a href="https://www.instagram.com/jazzjennings_/?hl=en">
-                        https://www.instagram.com/jazzjennings_/?hl=en
+                        instagram @jazzjennings_
                     </a> 
                 </li>
                 <li>
                     Erin:
                     <a href="https://www.erininthemorning.com">
-                        https://www.erininthemorning.com
+                        erininthemorning.com
                     </a> 
                 </li>
             </ul>
@@ -38,31 +39,31 @@
                 <li>
                     Sam smith:
                     <a href="https://www.instagram.com/samsmith/?hl=en">
-                        https://www.instagram.com/samsmith/?hl=en
+                        instagram @samsmith
                     </a> 
                 </li>
                 <li>
                     Jonathan van ness:
                     <a href="https://www.instagram.com/jvn/?hl=en">
-                        https://www.instagram.com/jvn/?hl=en
+                        instagram @jvn
                     </a> 
                 </li>
                 <li>
                     King Princess:
                     <a href="https://www.instagram.com/kingprincess69/?hl=en">
-                        https://www.instagram.com/kingprincess69/?hl=en
+                        instagram @kingprincess69
                     </a> 
                 </li>
                 <li>
                     Cara Delevigne:
                     <a href="https://www.instagram.com/caradelevingne/?hl=en">
-                        https://www.instagram.com/caradelevingne/?hl=en
+                        instagram @caradelevingne
                     </a> 
                 </li>
                 <li>
                     Vico Ortiz:
                     <a href="https://www.instagram.com/puertoricaninja/?hl=en">
-                        https://www.instagram.com/puertoricaninja/?hl=en
+                        instagram @puertoricaninja
                     </a> 
                 </li>
             </ul>
@@ -73,72 +74,72 @@
                 <li>
                     Ty Turner:
                     <a href="https://www.youtube.com/@TyTurner">
-                        https://www.youtube.com/@TyTurner
+                        youtube @TyTurner
                     </a> 
                 </li>
                 <li>
                     Jammi Dodger: 
                     <a href="https://www.youtube.com/@Jammidodger">
-                        https://www.youtube.com/@Jammidodger
+                        youtube @Jammidodger
                     </a>
                 </li>
                 <li>
                     Devon Spears:
                     <a href="https://www.youtube.com/@DevonSpears">
-                        https://www.youtube.com/@DevonSpears
+                        youtube @DevonSpears
                     </a> 
                 </li>
                 <li>
                     Micah:
                     <a href="https://www.youtube.com/@RealisticallyFree">
-                        https://www.youtube.com/@RealisticallyFree
+                        youtube @RealisticallyFree
                     </a> 
                 </li>
                 <li>
                     Matt Turner:
                     <a href="https://www.youtube.com/@MattTurner5">
-                        https://www.youtube.com/@MattTurner5
+                        youtube @MattTurner5
                     </a> 
                 </li>
                 <li>
                     Malcom:
                     <a href="https://www.instagram.com/gorillashrimp/">
-                        https://www.instagram.com/gorillashrimp/
+                        instagram @/gorillashrimp/
                     </a> 
                 </li>
                 <li>
                     Ftm Magazine:
                     <a href="https://www.instagram.com/ftmmagazine/">
-                        https://www.instagram.com/ftmmagazine/
+                        instagram @/ftmmagazine/
                     </a> 
                 </li>
                 <li>
                     Bennett:
                     <a href="https://www.instagram.com/bennettonpurpose/">
-                        https://www.instagram.com/bennettonpurpose/
+                        instagram @/bennettonpurpose/
                     </a> 
                 </li>
                 <li>
                     Danny:
                     <a href="https://www.instagram.com/dannythetransdad/?hl=en">
-                        https://www.instagram.com/dannythetransdad/?hl=en
+                        instagram @/dannythetransdad/?hl=en
                     </a> 
                 </li>
                 <li>
                     Sherman:
                     <a href="https://www.instagram.com/shermangiftbasket/">
-                        https://www.instagram.com/shermangiftbasket/
+                        instagram @/shermangiftbasket/
                     </a> 
                 </li>
                 <li id="aydian_dowling">
                     Aydian Dowling:
                     <a href="https://www.instagram.com/alionsfear/">
-                        https://www.instagram.com/alionsfear/
+                        instagram @alionsfear
                     </a><br>
                     Aydian Dowling (alionsfear) created “the trace app”: <br>
                     This lets you track your transition, and share it with others! (IOS/Android) <br>
                     <a href="https://linktr.ee/thetrace.app">
-                        https://linktr.ee/thetrace.app
+                        linktr.ee/thetrace.app
                     </a> 
                 </li>
             </ul>
