--- a/trans_fem_resources.html
+++ b/trans_fem_resources.html
@@ -266,7 +266,7 @@
         <p>
             Resource list including DIY Breast forms,hair loss,hrt,surgery, and many other topics. <br>
             <a href="https://www.transgendermap.com/welcome/for-trans-people/transfeminine/">
-                https://www.transgendermap.com/welcome/for-trans-people/transfeminine/
+                transgendermap.com/transfeminine/
             </a> 
         </p>
 
@@ -276,17 +276,21 @@
 
         <p>
             <a href="https://unclockable.com/blogs/unclockable-blog/wigs-the-perfect-tool-for-transgender-women">
-                https://unclockable.com/blogs/unclockable-blog/wigs-the-perfect-tool-for-transgender-women
+                unclockable.com/wigs-the-perfect-tool-for-transgender-women
             </a>
         </p>
 
         <h3 id="trans_fem_hair_wigs_recommendations">Wig stores that were recommended by other trans women</h3>
         <ul>
             <li>
-                <a href="https://wilshirewigs.com">https://wilshirewigs.com</a><br>
+                <a href="https://wilshirewigs.com">
+                    wilshirewigs.com
+                </a><br>
             </li>
             <li>
-                <a href="https://www.acewigs.com/shop/">https://www.acewigs.com/shop/</a>
+                <a href="https://www.acewigs.com/shop/">
+                    acewigs.com/shop/
+                </a>
             </li>
         </ul>
 
@@ -294,7 +298,7 @@
 
         <p>
             <a href="https://unclockable.com/blogs/unclockable-blog/feminizing-hair-tips-for-every-face-type-in-progress">
-                https://unclockable.com/blogs/unclockable-blog/feminizing-hair-tips-for-every-face-type-in-progress
+                unclockable.com/ - feminizing hair tips for every face type in progress
             </a>
         </p>
 
@@ -303,7 +307,7 @@
         <ul>
             <li>
                 <a href="https://strandsfortrans.org">
-                    https://strandsfortrans.org
+                    strandsfortrans.org
                 </a><br>
                 (US, CANADA, MEXICO, THE UK, NETHERLANDS, CZECHIA, FINLAND)<br>
             </li>
@@ -318,7 +322,7 @@
 
         <p>
             <a href="https://www.aad.org/public/diseases/hair-loss/treatment/tips">
-                https://www.aad.org/public/diseases/hair-loss/treatment/tips
+                aad.org/ - hair-loss treatment tips
             </a>
         </p>
 
@@ -332,7 +336,7 @@
         <p>
             Grants for electrolysis hair removal:  <br>
             <a href="https://www.pointofpride.org/electrolysis-support-fund">
-                https://www.pointofpride.org/electrolysis-support-fund
+                pointofpride.org/electrolysis-support-fund
             </a> 
         </p>
 
@@ -340,28 +344,36 @@
         <ul>
             <li>
                 Beginner and trans friendly makeup tips: 
-                <a href="https://www.youtube.com/@ThePrettyFix">https://www.youtube.com/@ThePrettyFix</a>
+                <a href="https://www.youtube.com/@ThePrettyFix">
+                    youtube.com/@ThePrettyFix
+                </a>
             </li>
         </ul>
         <h2 id="trans_fem_body_shape">Body shape</h2>
         <ul>
             <li>
                 Breast bra inserts,Gaffs,Tucking tape,dilators for post op: 
-                <a href="https://www.ftmessentials.com/collections/femme-items">https://www.ftmessentials.com/collections/femme-items</a>
+                <a href="https://www.ftmessentials.com/collections/femme-items">
+                    ftmessentials.com/femme-items
+                </a>
             </li>
             <li>
                 How to tuck safely educational guide: 
-                <a href="https://www.transyouthequality.org/tucking">https://www.transyouthequality.org/tucking</a>
+                <a href="https://www.transyouthequality.org/tucking">
+                    transyouthequality.org/tucking
+                </a>
             </li>
             <li>
                 Article about Trans woman workouts to gain fem shape: 
                 <a href="https://www.wussymag.com/all/body-feminizing-workouts-for-trans-women-and-femmes-part-2">
-                    https://www.wussymag.com/all/body-feminizing-workouts-for-trans-women-and-femmes-part-2
+                    wussymag.com/ - body feminizing workouts for trans women and femmes part 2
                 </a>
             </li>
             <li>
                 Grant for free fem shapewear: 
-                <a href="https://www.pointofpride.org/free-femme-shapewear">https://www.pointofpride.org/free-femme-shapewear</a>
+                <a href="https://www.pointofpride.org/free-femme-shapewear">
+                    pointofpride.org/free-femme-shapewear
+                </a>
             </li>
         </ul>
 
@@ -379,7 +391,7 @@
         <p>
             Facial feminization: 
             <a href="https://www.them.us/story/facial-feminization-surgery-recovery-tips">
-                https://www.them.us/story/facial-feminization-surgery-recovery-tips
+                them.us - facial feminization surgery recovery tips
             </a><br>
             (what is it, and how to heal)
         </p>
@@ -389,39 +401,56 @@
         <ul>
             <li>
                 Jim Collins Grant for gender confirming surgery: 
-                <a href="https://jimcollinsfoundation.org/apply/">https://jimcollinsfoundation.org/apply/</a>
+                <a href="https://jimcollinsfoundation.org/apply/">
+                    jimcollinsfoundation.org/
+                </a>
             </li>
             <li>
                 Trans justice fundraiser: 
-                <a href="https://www.transjusticefundingproject.org/apply/">https://www.transjusticefundingproject.org/apply/</a> 
+                <a href="https://www.transjusticefundingproject.org/apply/">
+                    transjusticefundingproject.org/apply/
+                </a> 
             </li>
             <li>
                 Gender care grant: 
-                <a href="https://www.genderbands.org/grants">https://www.genderbands.org/grants</a> 
+                <a href="https://www.genderbands.org/grants">
+                    genderbands.org/grants
+                </a> 
             </li>
             <li>
                 POP Surgery grant: 
-                <a href="https://www.pointofpride.org/annual-transgender-surgery-fund">https://www.pointofpride.org/annual-transgender-surgery-fund</a> 
+                <a href="https://www.pointofpride.org/annual-transgender-surgery-fund">
+                    pointofpride.org/annual-transgender-surgery-fund
+                </a> 
             </li>
             <li>
                 Trans United grant: 
-                <a href="https://tufforg.wixsite.com/tuffnew/apply">https://tufforg.wixsite.com/tuffnew/apply</a> 
+                <a href="https://tufforg.wixsite.com/tuffnew/apply">
+                    tufforg.com/tuffnew/apply</a> 
             </li>
             <li>
                 Healthcare: 
-                <a href="https://ariannas-center.org/causes/stipend-request/">https://ariannas-center.org/causes/stipend-request/</a> 
+                <a href="https://ariannas-center.org/causes/stipend-request/">
+                    ariannas-center.org/stipend-request/
+                </a> 
             </li>
             <li>
                 US trans grant: 
-                <a href="https://www.loftgaycenter.org/transmission">https://www.loftgaycenter.org/transmission</a> 
+                <a href="https://www.loftgaycenter.org/transmission">
+                    loftgaycenter.org/transmission
+                </a> 
             </li>
             <li>
                 Autistic BIPOC grant: 
-                <a href="https://autismandrace.com/autistic-people-of-color-fund/faqs/">https://autismandrace.com/autistic-people-of-color-fund/faqs/</a> 
+                <a href="https://autismandrace.com/autistic-people-of-color-fund/faqs/">
+                    autismandrace.com/autistic-people-of-color-fund/
+                </a> 
             </li>
             <li>
                 Black trans grants:
-                <a href="https://www.forthegworls.com/home">https://www.forthegworls.com/home</a> 
+                <a href="https://www.forthegworls.com/home">
+                    forthegworls.com
+                </a> 
             </li>
         </ul>
     </div>
