--- a/trans_masc_resources.html
+++ b/trans_masc_resources.html
@@ -267,7 +267,7 @@
 
         <p>
             <a href="https://www.ftmguide.org/myths.html">
-                https://www.ftmguide.org/myths.html
+                ftmguide.org/myths
             </a>
         </p>
 
@@ -275,7 +275,7 @@
 
         <p>
             <a href="https://www.transgendermap.com/welcome/for-trans-people/transmasculine/">
-                https://www.transgendermap.com/welcome/for-trans-people/transmasculine/
+                transgendermap.com/transmasculine/
             </a>
         </p>
 
@@ -283,33 +283,33 @@
         <p>
             How to shave your face: 
             <a href=" https://www.ftmguide.org/shaving.html">
-                https://www.ftmguide.org/shaving.html
+                ftmguide.org/shaving
             </a>
         </p>
         <p>
             Haircut guide for men: 
             <a href="https://www.ftmguide.org/haircuts.html">
-                https://www.ftmguide.org/haircuts.html
+                ftmguide.org/haircuts
             </a><br>
             FTM haircut: 
             <a href="https://outcoast.com/best-ftm-hairstyle-ideas/">
-                https://outcoast.com/best-ftm-hairstyle-ideas/
+                outcoast.com/best-ftm-hairstyle-ideas/
             </a>
         </p>
         <p>
             Hair loss on HRT: 
             <a href="https://www.ftmguide.org/hairloss.html">
-                https://www.ftmguide.org/hairloss.html
+                ftmguide.org/hairloss
             </a><br>
             Preventing Hair loss: 
             <a href="https://www.aad.org/public/diseases/hair-loss/treatment/tips">
-                https://www.aad.org/public/diseases/hair-loss/treatment/tips
+                aad.org/ - hair-loss treatment tips
             </a>
         </p>
         <p>
             Finding a safe trans haircut: 
             <a href="https://strandsfortrans.org">
-                https://strandsfortrans.org
+                strandsfortrans.org
             </a><br>
             (US,CANADA, MEXICO, THE UK, NETHERLANDS, CZECHIA, FINLAND)
         </p>
@@ -318,7 +318,7 @@
         <p>
             Finding shoes that fit smaller feet: 
             <a href="https://www.ftmguide.org/shoes.html">
-                https://www.ftmguide.org/shoes.html
+                ftmguide.org/shoes
             </a>
         </p>
 
@@ -345,43 +345,43 @@
                 <li>
                     Free Chest Binders Waitlist: 
                     <a href="https://www.pointofpride.org/free-chest-binders">
-                        https://www.pointofpride.org/free-chest-binders
+                        pointofpride.org/free-chest-binders
                     </a>
                 </li>
                 <li>
                     <a href="https://chestbinder.co">
-                        https://chestbinder.co
+                        chestbinder.co
                     </a> 
                     (free shipping worldwide)
                 </li>
                 <li>
                     Binders, Packers(to create bulge for dysphoria), STP (Stand to pee devices)<br>
                     <a href="https://transguysupply.com/collections/ftm-binders">
-                        https://transguysupply.com/collections/ftm-binders
+                        transguysupply.com/ftm-binders
                     </a>
                 </li>
                 <li>
                     GC2B 
                     <a href="https://www.gc2b.co/collections">
-                        https://www.gc2b.co/collections
+                        gc2b.co/collections
                     </a>
                 </li>
                 <li>
                     Underworks 
                     <a href="https://www.underworks.com/econo-high-power-compression-chest-binder-top?gclid=CjwKCAiAzc2tBhA6EiwArv-i6aV_RfcFjjbJbQCDVlPrGnkLjOeiykX5wtaz6A5TTIuLQFmvQx6TfRoCZcMQAvD_BwE">
-                        https://www.underworks.com/econo-high-power-compression-chest-binder-top
+                        underworks.com/ - econo high power compression chest binder top
                     </a><br>
                 </li>
                 <li>
                     FTMessentials: 
                     <a href="https://www.ftmessentials.com">
-                        https://www.ftmessentials.com
+                        ftmessentials.com
                     </a>
                 </li>
                 <li>
                     Target offers binders from Tomboyx: 
                     <a href="https://www.target.com/p/tomboyx-compression-bra-wireless-full-coverage-medium-support-bra-xs-6x/-/A-88179388?preselect=88482973#lnk=sametab">
-                        https://www.target.com/p/tomboyx-compression-bra-wireless-full-coverage-medium-support-bra-xs-6x/
+                        target.com/tomboyx compression bra
                     </a>
                 </li>
             </ul>
@@ -391,7 +391,7 @@
                 <li>
                     Binding as a plus size/large chest person? 
                     <a href="https://www.bustle.com/style/chest-binder-binding-plus-size-large-chests">
-                        https://www.bustle.com/style/chest-binder-binding-plus-size-large-chests
+                        bustle.com/ - chest binder binding plus size
                     </a>
                 </li>
             </ul>
@@ -401,7 +401,7 @@
                 <li>
                     Grants for free binders: 
                     <a href="https://www.pointofpride.org/free-chest-binders">
-                        https://www.pointofpride.org/free-chest-binders
+                        pointofpride.org/free-chest-binders
                     </a>
                 </li>
             </ul>
@@ -413,25 +413,25 @@
             <li>
                 Binding 101: 
                 <a href="https://www.pointofpride.org/blog/binding-101-tips-to-bind-your-chest-safely">
-                    https://www.pointofpride.org/blog/binding-101-tips-to-bind-your-chest-safely
+                    pointofpride.org/ - binding 101 tips to bind your chest safely
                 </a>
             </li>
             <li>
                 How to bind:
                 <a href="https://helloclue.com/articles/cycle-a-z/chest-binding-tips-and-tricks-for-trans-men-nonbinary-and-genderfluid">
-                    https://helloclue.com/articles/cycle-a-z/chest-binding-tips-and-tricks-for-trans-men-nonbinary-and-genderfluid
+                    helloclue.com/ - chest binding tips and tricks for trans men nonbinary and genderfluid
                 </a> 
             </li>
             <li>
                 Binding & Packing guide:
                 <a href="https://www.rainbow-project.org/safe-binding-and-packing/">
-                    https://www.rainbow-project.org/safe-binding-and-packing/
+                    rainbow-project.org/safe-binding-and-packing/
                 </a>
             </li>
             <li>
                 Binding in the Summer safely: 
                 <a href="https://www.pointofpride.org/blog/the-6-best-tips-for-binding-in-the-summer">
-                    https://www.pointofpride.org/blog/the-6-best-tips-for-binding-in-the-summer
+                    pointofpride.org/ - the 6 best tips for binding in the summer
                 </a>
             </li>
         </ul>
@@ -440,13 +440,19 @@
 
         <ul>
             <li>
-                <a href="https://transtape.life/pages/how-to-transtape">https://transtape.life/pages/how-to-transtape</a> 
+                <a href="https://transtape.life/pages/how-to-transtape">
+                    transtape.life/how-to-transtape
+                </a> 
             </li>
             <li>
-                <a href="https://transguysupply.com/blogs/news/how-to-bind-with-tape">https://transguysupply.com/blogs/news/how-to-bind-with-tape</a> 
+                <a href="https://transguysupply.com/blogs/news/how-to-bind-with-tape">
+                    transguysupply.com/how-to-bind-with-tape
+                </a> 
             </li>
             <li>
-                <a href="https://offbinary.com/blogs/articles/trans-tape-the-ultimate-guide">https://offbinary.com/blogs/articles/trans-tape-the-ultimate-guide</a> 
+                <a href="https://offbinary.com/blogs/articles/trans-tape-the-ultimate-guide">
+                    offbinary.com/trans-tape-the-ultimate-guide
+                </a> 
             </li>
         </ul>
 
@@ -543,31 +549,31 @@
         <p>
             Guide for Packers:
             <a href="https://www.folxhealth.com/library/transgender-packer-guide">
-                https://www.folxhealth.com/library/transgender-packer-guide
+                folxhealth.com/transgender-packer-guide
             </a> 
         </p>
         <h3>Where do I buy a packer?</h3> 
         <ul>
             <li>
                 <a href="https://transguysupply.com/collections/ftm-packers">
-                    https://transguysupply.com/collections/ftm-packers
+                    transguysupply.com/ftm-packers
                 </a> 
             </li>
             <li>
                 <a href="https://urbasics.ca/collections/packers">
-                    https://urbasics.ca/collections/packers
+                    urbasics.ca/packers
                 </a> 
             </li>
             <li>
                 <a href="https://www.ftmessentials.com">
-                    https://www.ftmessentials.com
+                    ftmessentials.com
                 </a> 
             </li>
         </ul>
         <p>
             Cloth packers & silicone packer/stps:<br>
             <a href="https://www.transkins.com/product-page/transkins-spfx">
-                https://www.transkins.com/product-page/transkins-spfx
+                transkins.com/transkins-spfx
             </a><br> 
             (click yes for popup, its sfw)
         </p>
@@ -582,27 +588,33 @@
         <h3>Guide to STPs</h3> 
         <p>
             <a href="https://urbasics.ca/pages/trans-guy-s-guide-to-stp-packers">
-                https://urbasics.ca/pages/trans-guy-s-guide-to-stp-packers
+                urbasics.ca/trans-guy-s-guide-to-stp-packers
             </a> 
         </p>
         <h3>Where can I buy one?</h3> 
         <p>
             <ul>
                 <li>
-                    <a href="https://transguysupply.com/collections/ftm-stp">https://transguysupply.com/collections/ftm-stp</a> 
+                    <a href="https://transguysupply.com/collections/ftm-stp">
+                        transguysupply.com/ftm-stp
+                    </a> 
                 </li>
                 <li>
-                    <a href="https://urbasics.ca/collections/stps">https://urbasics.ca/collections/stps</a> 
+                    <a href="https://urbasics.ca/collections/stps">
+                        urbasics.ca/stps
+                    </a> 
                 </li>
                 <li>
-                    <a href="https://www.ftmessentials.com">https://www.ftmessentials.com</a> 
+                    <a href="https://www.ftmessentials.com">
+                        ftmessentials.com
+                    </a> 
                 </li>
             </ul>
         </p>
         <p>
             silicone packer/stps and cloth packers:<br>
             <a href="https://www.transkins.com/product-page/transkins-spfx">
-                https://www.transkins.com/product-page/transkins-spfx
+                transkins.com/transkins-spfx
             </a><br> 
             (click yes for popup, its sfw)
         </p>
@@ -618,67 +630,67 @@
             <li>
                 Jim Collins Grant for gender confirming surgery:
                 <a href="https://jimcollinsfoundation.org/apply/">
-                    https://jimcollinsfoundation.org/apply/
+                    jimcollinsfoundation.org/
                 </a> 
             </li>
             <li>
                 Trans justice fundraiser:
                 <a href="https://www.transjusticefundingproject.org/apply/">
-                    https://www.transjusticefundingproject.org/apply/
+                    transjusticefundingproject.org/
                 </a> 
             </li>
             <li>
                 Gender care grant:
                 <a href="https://www.genderbands.org/grants">
-                    https://www.genderbands.org/grants
+                    genderbands.org/grants
                 </a> 
             </li>
             <li>
                 POP Surgery grant:
                 <a href="https://www.pointofpride.org/annual-transgender-surgery-fund">
-                    https://www.pointofpride.org/annual-transgender-surgery-fund
+                    pointofpride.org/annual-transgender-surgery-fund
                 </a> 
             </li>
             <li>
                 Trans United grant:
                 <a href="https://tufforg.wixsite.com/tuffnew/apply">
-                    https://tufforg.wixsite.com/tuffnew/apply
+                    tufforg.com/tuffnew/apply
                 </a> 
             </li>
             <li>
                 Healthcare:
                 <a href="https://ariannas-center.org/causes/stipend-request/">
-                    https://ariannas-center.org/causes/stipend-request/
+                    ariannas-center.org/stipend-request/
                 </a> 
             </li>
             <li>
                 US trans grant:
                 <a href="https://www.loftgaycenter.org/transmission">
-                    https://www.loftgaycenter.org/transmission
+                    loftgaycenter.org/transmission
                 </a> 
             </li>
             <li>
                 Black trans masc top surgery grant:
                 <a href="https://blacktransmen.org/top-surgery-grant/">
-                    https://blacktransmen.org/top-surgery-grant/
+                    blacktransmen.org/top-surgery-grant/
                 </a> 
             </li>
             <li>
                 BIPOC trans masc surgery fund:
                 <a href="https://www.dembois.org/apply-for-a-grant">
-                    https://www.dembois.org/apply-for-a-grant
+                    dembois.org/apply-for-a-grant
                 </a> 
             </li>
             <li>
                 Autistic BIPOC grant:
                 <a href="https://autismandrace.com/autistic-people-of-color-fund/faqs/">
-                    https://autismandrace.com/autistic-people-of-color-fund/faqs/
+                    autismandrace.com/autistic-people-of-color-fund
                 </a> 
             </li>
             <li>
                 Black trans grants:
                 <a href="https://www.forthegworls.com/home">
-                    https://www.forthegworls.com/home
+                    forthegworls.com/
                 </a> 
             </li>
         </ul>
